--- a/starter-code/styles/base.css
+++ b/starter-code/styles/base.css
@@ -1,14 +1,13 @@
 /* TODO: Add a rule for images, so they never exceed their container's width. */
+img{
+  max-width: 100%;
+}
 
 body {
   line-height: 1.5;
   font-size: 100%;
   color: #313131;
 }
-img{
-  width: 100%;
-}
-
 
 hr {
   margin: 1em;
