--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -11,7 +11,7 @@
 /* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
 .icon-menu {
   float: right;
-  font-size: 50px;
+  font-size: 6.25em;
 }
 
 .main-nav {
@@ -60,15 +60,15 @@
          - Just, ya know, try to make it look good! */
 /* @media only screen... */
 @media only screen and (min-width: 520px) {
- .icon-menu {
-   display: none;
- }
- .main-nav ul {
-   display: block;
- }
- .main-nav li {
-   display: inline-block;
-   border-bottom: none;
-   padding-left: .667em;
- }
+  .icon-menu{
+    display:none;
+  }
+  .main-nav ul{
+    display:block;
+  }
+  .main-nav li{
+    display:inline-block;
+    border-bottom: none;
+    padding-left: .700rem;
+  }
 }
